# ClickHouse

./: .gitmodules  CHANGELOG.md  README.md
.claude/: CLAUDE.md  settings.local.json
.claude/skills/alloc-profile/: SKILL.md
.claude/skills/create-worktree/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/tools/: fetch_ci_report.js
.github/workflows/: master.yml  pull_request.yml
ci/defs/: job_configs.py
ci/jobs/: functional_tests.py
cmake/: cpu_features.cmake
contrib/: CMakeLists.txt
contrib/llama-cpp-cmake/: CMakeLists.txt  cpu_dispatch.cpp
contrib/onnxruntime-cmake/: CMakeLists.txt
docs/en/operations/: allocation-profiling.md
programs/: main.cpp
programs/keeper-client/: KeeperClient.cpp
programs/server/: Server.cpp  jemalloc.html  play.html
programs/server/config.d/: embedding.xml
src/: CMakeLists.txt  configure_config.cmake
src/Access/: AccessControl.cpp
src/AggregateFunctions/: AggregateFunctionCramersVBiasCorrected.cpp
src/Analyzer/Passes/: FunctionToSubcolumnsPass.cpp  RegexpFunctionRewritePass.cpp
src/Analyzer/Resolve/: QueryAnalyzer.cpp  resolveFunction.cpp
src/Backups/: BackupCoordinationOnCluster.cpp  BackupCoordinationStageSync.cpp  BackupEntriesCollector.cpp  RestoreCoordinationOnCluster.cpp
src/Client/: ClientBase.cpp
src/Columns/: ColumnAggregateFunction.h  ColumnBLOB.h  ColumnCompressed.h  ColumnConst.cpp  ColumnConst.h  ColumnDecimal.h  ColumnDynamic.h  ColumnFixedString.h  ColumnFunction.h  ColumnLowCardinality.cpp  ColumnLowCardinality.h  ColumnString.h  ColumnUnique.h  ColumnVector.h  IColumn.cpp  IColumn.h
src/Common/: CMakeLists.txt  ErrorCodes.cpp  FailPoint.cpp  HTTPConnectionPool.cpp  ProfileEvents.cpp  SignalHandlers.cpp
src/Common/JSONParsers/: CMakeLists.txt  ColumnObjectParser.cpp  ColumnObjectParser.h
src/Common/ZooKeeper/: ZooKeeper.cpp  ZooKeeperImpl.cpp
src/Compression/: LZ4_decompress_faster.cpp
src/Coordination/: KeeperContext.cpp
src/Core/: ServerSettings.cpp  Settings.cpp  Settings.h  SettingsChangesHistory.cpp  SettingsEnums.cpp  SettingsEnums.h
src/Core/YTsaurus/: YTsaurusClient.cpp  YTsaurusClient.h
src/DataTypes/: IDataType.h
src/DataTypes/Serializations/: SerializationObject.cpp  SerializationObjectSharedData.cpp  SerializationSparse.cpp
src/Databases/: DatabaseOrdinary.cpp  DatabaseReplicated.cpp  DatabaseReplicatedWorker.cpp
src/Dictionaries/: IPAddressDictionary.cpp  YTsaurusDictionarySource.cpp
src/Disks/: DiskLocal.cpp
src/Disks/IO/: CachedOnDiskReadBufferFromFile.cpp  IOUringReader.cpp  ThreadPoolReader.cpp  ThreadPoolReader.h
src/Formats/: JSONExtractTree.cpp
src/Functions/: CMakeLists.txt  FunctionVariantAdaptor.cpp  FunctionsConversion.cpp  FunctionsConversion.h  FunctionsJSON.cpp  fuzzQuery.cpp
src/Functions/Embedding/: CMakeLists.txt  EmbeddingModelRegistry.cpp  EmbeddingModelRegistry.h  FunctionEmbedding.cpp  IEmbeddingModel.cpp  IEmbeddingModel.h  LlamaCppEmbeddingModel.cpp  LlamaCppEmbeddingModel.h  OnnxEmbeddingModel.cpp  OnnxEmbeddingModel.h
src/Functions/HTML/: FunctionHtml.cpp  LxbDocument.h
src/Functions/UserDefined/: UserDefinedWebAssembly.cpp  UserDefinedWebAssembly.h
src/Functions/array/: arrayDotProduct.cpp
src/IO/: SynchronousReader.cpp
src/IO/tests/: gtest_archive_reader_and_writer.cpp
src/Interpreters/: ActionsDAG.cpp  Context.cpp  Context.h  DDLWorker.cpp  DDLWorker.h  DatabaseCatalog.cpp  InsertDeduplication.cpp  InsertDependenciesBuilder.cpp  InterpreterCreateQuery.cpp  InterpreterSystemQuery.cpp  Session.cpp  Squashing.cpp  TransactionLog.cpp  executeQuery.cpp
src/Interpreters/WebAssembly/: WasmTimeRuntime.cpp
src/Parsers/: CommonParsers.h  ExpressionListParsers.cpp  ParserSystemQuery.cpp  ParserUnionQueryElement.cpp  obfuscateQueries.cpp
src/Parsers/Access/: ASTCreateUserQuery.cpp
src/Processors/QueryPlan/: ReadFromMergeTree.cpp
src/Processors/Sources/: JemallocProfileSource.cpp  JemallocProfileSource.h  SQLiteSource.cpp  YTsaurusSource.cpp  YTsaurusSource.h
src/Server/: TCPHandler.cpp
src/Server/ACME/: Client.cpp
src/Storages/: AlterCommands.cpp  IndicesDescription.cpp  StorageBuffer.cpp  StorageInMemoryMetadata.cpp  StorageKeeperMap.cpp  StorageMergeTree.cpp  StorageMergeTreeTextIndex.cpp  StorageReplicatedMergeTree.cpp  VirtualColumnUtils.h
src/Storages/Distributed/: DistributedAsyncInsertDirectoryQueue.cpp
src/Storages/Kafka/: StorageKafka2.cpp
src/Storages/MergeTree/: AsyncBlockIDsCache.cpp  IMergeTreeDataPart.cpp  IMergeTreeDataPart.h  KeyCondition.cpp  MergeTask.cpp  MergeTreeBlockReadUtils.cpp  MergeTreeData.cpp  MergeTreeData.h  MergeTreeDataPartWide.cpp  MergeTreeDataSelectExecutor.cpp  MergeTreeIndexMinMax.cpp  MergeTreeIndexReader.cpp  MergeTreeIndexText.cpp  MergeTreeIndexText.h  MergeTreeIndices.cpp  MergeTreeIndices.h  MergeTreeMarksLoader.cpp  MergeTreePrefetchedReadPool.cpp  MergeTreeReadPoolBase.cpp  MergeTreeReadTask.cpp  MergeTreeReaderStream.cpp  MergeTreeReaderWide.cpp  MergeTreeReadersChain.cpp  MergeTreeReadersChain.h  MutatePlainMergeTreeTask.cpp  MutateTask.cpp  ReplicatedMergeTreeCleanupThread.cpp  ReplicatedMergeTreeRestartingThread.cpp  ReplicatedMergeTreeSink.cpp  ReplicatedMergeTreeSinkPatch.cpp  registerStorageMergeTree.cpp
src/Storages/ObjectStorage/: StorageObjectStorage.cpp  StorageObjectStorageCluster.cpp
src/Storages/ObjectStorageQueue/: ObjectStorageQueueIFileMetadata.cpp  ObjectStorageQueueMetadata.cpp  ObjectStorageQueueSource.cpp  StorageObjectStorageQueue.cpp
src/Storages/Statistics/: Statistics.cpp
src/Storages/System/: JemallocProfileSource.h  StorageSystemEmbeddingModels.cpp  StorageSystemEmbeddingModels.h  StorageSystemJemallocProfile.cpp  StorageSystemJemallocProfile.h  StorageSystemPartsColumns.cpp  StorageSystemTables.cpp  attachSystemTables.cpp
src/Storages/TimeSeries/: PrometheusHTTPProtocolAPI.h
src/Storages/YTsaurus/: StorageYTsaurus.cpp  StorageYTsaurus.h
tests/casa_del_dolor/: properties.py
tests/config/: install.sh
tests/performance/: join_swap_sides.xml
utils/list-licenses/: list-licenses.sh
(+157 files in other folders)
